Make categories shown on front page configurable.

--- a/config.toml
+++ b/config.toml
@@ -34,3 +34,4 @@ googleAnalytics = ""
 [params]
     description = "Recipe blog by Lynn Whiteley"
     footer = "Copyright 2021 Lynn Whiteley"
+    front_categories = ["chicken", "meatless", "pork", "steak"]
